components/molecule/drawer/src/styles/index.scss
$base-class: '.sui-MoleculeDrawer';

#{$base-class} {
  &-overlay {
    position: fixed;
    left: 0px;
    top: 0px;
    width: 100%;
    height: 100%;
    z-index: $z-molecule-drawer-overlay;
    animation: bg-overlay 1s both;
  }

  &-content {
    $this: &;

    z-index: $z-molecule-drawer;
    position: absolute;
    background-color: $bgc-molecule-drawer;
    display: block;

    &--animationDuration {
      transition-property: transform;
      transition-timing-function: linear;
      @each $transition-duration-name, $transition-duration-value in $trsdu-molecule-drawer-map {
        &-#{$transition-duration-name} {
          transition-duration: $transition-duration-value;
        }
      }
    }
    &--placement {
      position: fixed;
      &-left {
        top: 0;
        left: 0;
        transform: translateX(-100%);
        border-top-right-radius: $bdtrrs-molecule-drawer-content;
        border-bottom-right-radius: $bdbrrs-molecule-drawer-content;
      }
      &-right {
        top: 0;
        right: 0;
        transform: translateX(100%);
        border-top-left-radius: $bdtlrs-molecule-drawer-content;
        border-bottom-left-radius: $bdblrs-molecule-drawer-content;
      }
      &-top {
        top: 0;
        left: 0;
        transform: translateY(-100%);
        border-bottom-left-radius: $bdblrs-molecule-drawer-content;
        border-bottom-right-radius: $bdbrrs-molecule-drawer-content;
      }
      &-bottom {
        bottom: 0;
        left: 0;
        transform: translateY(100%);
        border-top-left-radius: $bdtlrs-molecule-drawer-content;
        border-top-right-radius: $bdtrrs-molecule-drawer-content;
      }
    }

    @each $size-name, $size-value in $z-molecule-drawer-map {
      &--size-#{$size-name} {
        &#{$this}--placement-left {
          height: 100%;
          width: $size-value;
          max-width: 100%;
          overflow-x: $ox-molecule-drawer-sroll;
        }
        &#{$this}--placement-right {
          height: 100%;
          width: $size-value;
          max-width: 100%;
          overflow-x: $ox-molecule-drawer-sroll;
        }
        &#{$this}--placement-top {
          width: 100%;
          height: $size-value;
          max-height: 100%;
          overflow-y: $oy-molecule-drawer-sroll;
        }
        &#{$this}--placement-bottom {
          width: 100%;
          height: $size-value;
          max-height: 100%;
          overflow-y: $oy-molecule-drawer-sroll;
        }
      }
    }
    &--state-opened {
      box-shadow: $bxsh-molecule-drawer;
      &#{$this}--placement {
        &-left,
        &-right {
          transform: translateX(0);
        }
        &-top,
        &-bottom {
          transform: translateY(0);
        }
      }
    }
  }
}

